# deepip

./: .gitignore  .pylintrc  CHANGELOG.md  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: check.yml  linter.yml  pylint.yml  tests.yml
deepip/: __main__.py  main.py  manager.py
deepip/commands/: tree.py
deepip/core/: builders.py  node.py  package.py  pypi_api.py  requirement.py  views.py
deepip/core/api/: cache.py  pypi_api.py
deepip/core/views/: __init__.py  formating.py  views.py
tests/: test_depnode.py  test_package.py  test_requirementinfo.py
tests/core/: test_builders.py  test_depnode.py
tests/core/views/: test_formatting.py
tests/factories/pkg_resources/: package.py  requirement.py
