[tool.poetry]
name = "deepip"
version = "0.2.0"
description = "Simple pet project for printing python dependency tree"
authors = ["Nesterenko <nestslock@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.7"
pytest-mock = "^3.6.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pylint = "^2.11.1"
black = "^21.10b0"
pytest-cov = "^3.0.0"
Faker = "^9.8.1"

[build-system]
requires = [
    "setuptools>=54",
    "wheel"
]
build-backend = "setuptools.build_meta"


[tool.black]
line-length = 120
skip-string-normalization = true
