[metadata]
name = deepip
version = 0.0.1
author = Nesterenko Sergey
author_email = nestsdev@gmail.com
description = Simple pet project for printing python dependency tree
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = deepip
python_requires = >=3.7
